components/service-provider-integration-oauth/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    build.appstudio.openshift.io/application: alpo-studio
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/component: service-provider-integration-oauth
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elservice-provider-integration-oauth
  namespace: jduimovich
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-service-provider-integration-oauth
    weight: null
status: {}
